# job-graph-processor-infra

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  constants.py  perf_app.py  pyproject.toml  setup.cfg
.github/: TEMPLATE_SETUP.md  copilot-instructions.md  template-repository.json
.github/workflows/: manual-deploy.yml  test-common.yml  test-on-main.yml  test-on-pr.yml
cdk/: README.md  __init__.py  app_stack.py  constants.py  lambda_dynamodb_construct.py  scenario1_stack.py  scenario2_stack.py
cdk/shared/: __init__.py  vpc_stack.py
docker/: Dockerfile
scripts/: __init__.py  run_perf_test.py  run_scheduler.py  simple_implementation.py
scripts/data_generators/: aircraft_daily_sequence_generator.py  departure_delay_model_generator.py  landing_delay_model_generator.py  read_airports.py
sequences/: sequence_0.json  sequence_1.json
service/: __init__.py
service/container/: __init__.py  processor.py
service/core/: delay_modelling.py  sequences_to_jobs.py
service/dal/: __init__.py  container.py  dynamodb.py  in_memory.py  interface.py  local_disk.py  s3.py  sqs.py  sqs_jobs.py
service/handlers/: __init__.py  create_item.py  get_item.py  processor.py
service/jobs/: jobs.py
service/models/: __init__.py  aircraft_daily_sequence_dto.py  airport.py  item.py  job.py
service/scheduler/: __init__.py  external_scheduler.py
tests/: conftest.py
tests/unit/: test_app_stack.py  test_data_generators.py  test_in_memory_job_da.py  test_s3_data_access.py  test_scenario1_stack.py  test_sqs_jobs_data_access.py
