[metadata]
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License

[options]
packages = find:
python_requires = >=3.10

[flake8]
exclude = .venv, __pycache__, build, dist
max-line-length = 88
extend-ignore = E203, W503

[mypy]
python_version = 3.10
files = src, tests
ignore_missing_imports = True
strict_optional = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[black]
line-length = 88
target-version = ['py310']
exclude = \.venv|__pycache__|build|dist

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = True
known_first_party = your_project_name
skip = .venv

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = tests
